--- a/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
@@ -20,35 +20,33 @@
         <pe:layout fullPage="true" options="#{attacheBean.layoutOptions}" widgetVar="fpLayoutWidget">
             <p:ajax event="resize" listener="#{attacheBean.handleResize}"/> 
             <pe:layoutPane position="center" resizable="true">
-                <h:form id="docViewerFRM">  
-                    <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12">
-                        <p:outputPanel style="width: 100%;" rendered="#{attacheBean.content != null}">
-                            <pe:documentViewer value="#{attacheBean.content}" 
-                                               height="700" style="width: 100%;"/>
-                        </p:outputPanel>
+                <h:form id="docViewerFRM"> 
+                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
 
-                        <p:panel styleClass="ui-grid-col-12" rendered="#{attacheBean.content == null}">
-                            <p:panelGrid columns="1" styleClass="ui-grid-col-12 ui-panelgrid-blank">
-                                <br/>
-                                <br/>
-                                <br/>
-                                <br/>
-                                <p:outputLabel value="#{bundle.DocumentPreviewIisNotAvailable}"/>
-                                <br/>
-                                <br/>
-                                <br/>
-                                <br/>
+                    <p:toolbar styleClass="#{attacheBean.content == null ? 'panelLogin' : 'ui-grid-col-12' }">
+                        <f:facet name="right">
+                            <p:commandButton icon="ui-icon-circle-close" style="float:right;"
+                                             title="#{bundle.Close}"
+                                             action="#{attacheBean.onCloseCard()}"> 
+                            </p:commandButton> 
+                        </f:facet>
+                    </p:toolbar>
+
+                    <p:panelGrid layout="grid" columns="1" rendered="#{attacheBean.content != null}" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12">
+                        <pe:documentViewer value="#{attacheBean.content}" height="750" style="width: 100%;"/>                        
+                    </p:panelGrid>
+
+                    <p:panelGrid columns="1" layout="grid" rendered="#{attacheBean.content == null}" columnClasses="ui-grid-col-12" styleClass="panelLogin">
+                        <p:panel styleClass="ui-grid-col-12">
+                            <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-12" styleClass="ui-grid-col-12">
+                                <p:graphicImage name="/images/escom_logo.jpg"  /> 
+                                <h:panelGroup styleClass="ui-grid-col-12">
+                                    <h4>
+                                        <h:outputLabel value="#{bundle.DocumentPreviewIisNotAvailable}"/> 
+                                    </h4>
+                                </h:panelGroup>
                             </p:panelGrid>
                         </p:panel>
-
-                        <p:toolbar styleClass="ui-grid-col-12">
-                            <f:facet name="right">
-                                <p:commandButton value="#{bundle.Close}" style="float:right;"
-                                                 title="#{bundle.Close}"
-                                                 action="#{attacheBean.onCloseCard()}"> 
-                                </p:commandButton> 
-                            </f:facet>
-                        </p:toolbar>
                     </p:panelGrid>
                 </h:form>
             </pe:layoutPane>
