--- a/escom-bpm-web/src/main/webapp/view/services/mail-service.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/services/mail-service.xhtml
@@ -5,6 +5,8 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:h="http://xmlns.jcp.org/jsf/html">
 
+    <ui:param name="_bean" value="#{mailBean}"/>
+    
     <ui:define name="title">
         #{bundle.MailService}
     </ui:define>
